--- a/dstore2/app/src/main/AndroidManifest.xml
+++ b/dstore2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.Dstore"
         tools:targetApi="31">
         <activity
+            android:name=".store7"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".store6"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".store5"
             android:exported="false">
             <meta-data
